--- a/quinta_sexta_tarea/tienda/src/main/resources/application.properties
+++ b/quinta_sexta_tarea/tienda/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.driverClassName=org.postgresql.Driver
 server.port=8081
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
